[gd_scene load_steps=4 format=3 uid="uid://coupj55agy31s"]

[ext_resource type="Theme" uid="uid://xso5aetv5tyl" path="res://resources/themes/hud_theme.tres" id="1_fqibc"]
[ext_resource type="Script" uid="uid://bk8nwhbgicue0" path="res://scenes/relic_handler/relic_tooltip.gd" id="2_srgwn"]
[ext_resource type="Texture2D" uid="uid://ddxqogw3lxtvj" path="res://assets/icons/millenium-key.svg" id="3_0jeqr"]

[node name="RelicTooltip" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fqibc")
script = ExtResource("2_srgwn")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.294118, 0.239216, 0.266667, 0.956863)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -206.0
offset_right = 254.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RelicIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_0jeqr")
expand_mode = 1
stretch_mode = 5

[node name="RelicDescription" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "Relic Description
Relic Description"
fit_content = true
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_top = 24.0
offset_right = -31.0
offset_bottom = 76.0
grow_horizontal = 0
text = "Back"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
